Se corrige librería de lista circular y se agregan dos ejercicios de aplicación conceptual de lista circular y lista doble enlazada

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(Ej4 Ej4.cpp)
 add_executable(Ej5 Ej5.cpp)
 add_executable(Ej6 Ej6.cpp)
 add_executable(Ej7 Ej7.cpp)
+add_executable(Ej8 Ej8.cpp
+        Ej8.cpp)
+add_executable(Ej9 Ej9.cpp)
